--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "develop": "npm-run-all -p watch-elm",
+    "develop": "HOST=localhost npm-run-all -p watch-elm",
     "build": "yarn build-css && yarn build-elm",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch-elm": "elm-app start",
