--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": ">=0.12"
   },
   "dependencies": {
+    "elm-debug-transformer": "^1.0.4",
     "node-sass-chokidar": "^1.4.0",
     "npm-run-all": "^4.1.5"
   },
