--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "elm-debug-transformer": "^1.0.4",
+    "firebase": "^7.14.0",
     "node-sass-chokidar": "^1.4.0",
     "npm-run-all": "^4.1.5"
   },
